--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "node-sass": "^4.14.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-fcctest": "^1.3.5",
     "react-scripts": "3.4.1"
   },
   "scripts": {
